package com.whistle.code.design.observer;

/**
 *
 * @author Gentvel
 * @version 1.0.0
 */
public interface Observer {
    void update();
}
